APCS/Chapter 3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_21\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\APCS\Chapter 3
-d
H:\APCS\Chapter 3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\APCS\Chapter 3\ch3_2.java
<---- end of javadoc command ---->
Loading source file H:\APCS\Chapter 3\ch3_2.java...
H:\APCS\Chapter 3\ch3_2.java:42: error: ')' expected
		if (side
		        ^
1 error
